<resources>
    <string name="app_name">" studying"</string>
    <!-- TELA DE LOGIN -->
    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="bt_login">Login</string>
    <string name="cad_google">Cadastrar com Google</string>
    <!--TELA DE CADASTRO -->
    <string name="bt_cadastrar">Cadastrar</string>
    <string name="nome">Nome</string>
    <string name="email">E-mail</string>
    <string name="telefone">Telefone</string>
    <string name="dt_nascimento">Nascimento</string>
    <string name="escolaridade">Escolaridade</string>
    <string name="profissao">Profissão</string>
    <string name="ft_perfil">Upload Foto Perfil</string>
    <string name="pais">País</string>
    <string name="estado">Estado</string>
    <string name="cidade">Cidade</string>

    <!-- COLEÇÃO MENU -->
    <string name="gi_perfil">Perfil</string>
    <string name="gi_abrirA">Nova Atividade</string>
    <string name="gi_consulta">Consultar Atividades</string>
    <string name="gi_email">Enviar E-mail</string>
    <string name="gi_avaliar">Avaliar</string>
    <string name="gi_sair">Sair</string>
    <string name="gi_config">Configurações</string>

    <!--FRAGMENT: NOVA ATIVIDADE -->
    <string name="tv_atendimentos">Atendimentos</string>
    <string name="tv_data_abertura">Data de Abertura</string>
    <string name="tv_data_atualizacao">Data Atualização</string>
    <string name="anexos">Anexos</string>
    <string name="nivel">Nivel</string>
    <string name="tv_owner">Criado por:</string>
    <string name="bt_salvar_atividade">Salvar</string>
    <string name="et_descricao">Descrição da Atividade</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"http://www.loginstudying.com\",\n  }\n}]</string>
</resources>
