<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramattecgmail.rafah.studying.Activitys.LoginActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />


    <EditText
        android:id="@+id/et_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="129dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/et_username"
        android:layout_below="@+id/et_username"
        android:layout_marginTop="42dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:layout_alignLeft="@+id/et_username" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/bt_login"
        android:layout_below="@+id/et_password"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/bt_google"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/bt_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />


</RelativeLayout>
