<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="10dp"
    tools:context="com.ramattecgmail.rafah.studying.Fragments.AtividadeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiCategoriaNA"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/bt_categoria"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="8dp">


                <EditText
                    android:id="@+id/et_categoria"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:ems="10"
                    android:hint="categoria"
                    android:inputType="textAutoComplete"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="@+id/bt_categoria"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_constraintLeft_creator="1"
                    tools:layout_constraintRight_creator="1" />

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/spn_tempo"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiCategoriaNA"
                tools:layout_constraintLeft_creator="1"
                tools:layout_constraintTop_creator="1" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/tiTituloNA"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/spn_tempo">

                <EditText
                    android:id="@+id/et_titulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"
                    android:hint="titulo"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginLeft="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/spn_tempo"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp" />


            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/et_descricao"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:gravity="top"
                android:hint="@string/et_descricao"
                android:elevation="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textMultiLine"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tiTituloNA"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintHorizontal_bias="0.0" />

            <EditText
                android:id="@+id/et_Owner"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="Owner"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8" />

            <TextView
                android:id="@+id/tv_info_atend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_atendimentos"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="16dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/spn_nivel" />

            <TextView
                android:id="@+id/tv_atendimentos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="32dp"
                android:text="0"
                android:textSize="@dimen/tam_textviews"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="32dp"
                app:layout_constraintBaseline_toBaselineOf="@+id/et_Owner" />

            <EditText
                android:id="@+id/et_data_abertura"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:enabled="false"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView4"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_data_abertura"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_Owner"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginStart="8dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_data_atualizacao"
                android:layout_marginRight="16dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/textView4"
                android:layout_marginEnd="16dp" />

            <EditText
                android:id="@+id/et_data_atualizacao"
                android:layout_width="130dp"
                android:layout_height="wrap_content"
                android:inputType="date"
                android:enabled="false"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/et_data_abertura"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/bt_anexar_AtivFrag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/anexos"
                android:textSize="@dimen/tam_bt_anexos"
                android:textAlignment="inherit"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/et_descricao"
                android:layout_marginStart="8dp"
                android:drawableRight="@drawable/ic_attach_file" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nivel"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_descricao"
                android:layout_marginEnd="8dp" />

            <Spinner
                android:id="@+id/spn_nivel"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                android:layout_marginEnd="8dp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_owner"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_info_atend"
                android:layout_marginStart="8dp" />

            <Button
                android:id="@+id/bt_salvar_atividade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_salvar_atividade"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/et_data_abertura"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

            <Button
                android:id="@+id/bt_categoria"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Categoria"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp" />

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</RelativeLayout>
